docstream/styles/main.css
.editsContainer{
    position: fixed;
    top: 50%;
    left: 50%;
    height: 70vh;
    width: 80vw;
    background-color: rgba(255, 255, 255, 0.845);
    transform: translate(-50%, -50%);
    z-index: 100000;
    border: 2px solid rgba(0, 0, 0, 0.275);
    border-radius: 10px;
    overflow: auto;
    /* color: white; */
}

.indiEditContainer{
    position: relative;
    padding: 20px;
    border: 2px solid black;
    /* background-color: rgb(35, 35, 35); */
}

.indiEditContainer > h2{
    font-size: 1.4rem;
}

.indiEditContainer .quill{
    border: none;
}

.indiEdit{
    position: relative;
    display: grid;
    grid-template-columns: 45% 5% 45%;
    align-items: center;
}

.indiEdit > p{
    justify-self: center;
}

.editsContainer > div > div{
    position: relative;
    padding: 40px;
}


.container{
    position: relative;
    display: grid;
    min-height: 100vh;
    width: 100vw;
    grid-template-rows: 7% 4% auto;
}

#toolbar{
    background-color: #F1F5F9;
    color: black;
    width: 100vw;
    position: relative;
    border: red 2px solid;
}

header{
    background-color: #F1F5F9;
    color: black;
    width: 100vw;
    height: inherit;
    display: grid;
    grid-template-columns: 30% 70%;
    align-items: center;
    justify-items: left;
    padding: 10px 50px;
    border: blue 2px solid;

}

header>div:nth-of-type(1){
    display: grid;
    grid-template-columns: repeat(2, auto);
    justify-items: center;
    align-items: center;
    column-gap: 10px;
}

header>div:nth-of-type(2){
    display: grid;
    grid-template-columns: repeat(5, auto);
    justify-self: right;
    column-gap: 50px;
}

.editorContainer{
    padding: 110px 0;
    background: url('../pages/BGGREYGREEN.svg') center center;

}

.button {
    position: relative;
    padding: 10px 40px;
    border-radius: 20px;
    background-color: #F1F5F9;
    box-shadow: 8px 8px 16px #C9D9E8, -8px -8px 16px #FFFFFF;
    cursor: pointer;
    animation-duration: 0.05s;
    outline: none;
    border: none;
    transition: all 0.5s ease;
}

.button:hover {
    animation-name: shadow;
    animation-timing-function: ease;
    box-shadow: inset 4px 4px 8px #c9d9e88b, inset -4px -4px 8px #ffffff;
}

@keyframes shadow {
    0% {
        box-shadow: 8px 8px 16px #C9D9E8, -8px -8px 16px #FFFFFF;
    }

    50% {
        box-shadow: 0px 0px 0px #C9D9E8, 0px 0px 0px #FFFFFF;
    }

    100% {
        box-shadow: inset 4px 4px 8px #c9d9e88b, inset -4px -4px 8px #ffffff;
    }
}

